hack/local-run-test/charts/argocd-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - kind: Rule
      match: HostRegexp(`{host:^argocd.*$}`)
      priority: 10
      services:
        - name: argocd-server
          port: 80
    - kind: Rule
      match: HostRegexp(`{host:^argocd.*$}`) && Headers(`Content-Type`, `application/grpc`)
      priority: 11
      services:
        - name: argocd-server
          port: 80
          scheme: h2c
  # tls:
  #   certResolver: default
